fix: hide side actions on small devices

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -99,7 +99,7 @@ header {
   }
 }
 
-@media (max-width: $md) {
+@media (min-width: $md) {
   header {
     height: 100vh;
     padding-top: 5rem;
